web-infras/parser/tests/fixtures/babel/es2015/destructuring/binding-arguments-strict/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (2,9)
2|const { arguments } = foo();
 |       ^
